// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots arguments/ContainerStyle extended 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div>
    <h6
      className="euiTitle euiTitle--xxxsmall euiTitle--uppercase"
    >
      Appearance
    </h6>
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
      justify-content="spaceBetween"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Padding
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <input
                  className="euiFieldNumber euiFieldNumber--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="number"
                  value={0}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow3"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Opacity
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  className="euiSelect euiSelect--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onMouseUp={[Function]}
                  value={1}
                >
                  <option
                    value={1}
                  >
                    100%
                  </option>
                  <option
                    value={0.9}
                  >
                    90%
                  </option>
                  <option
                    value={0.7}
                  >
                    70%
                  </option>
                  <option
                    value={0.5}
                  >
                    50%
                  </option>
                  <option
                    value={0.3}
                  >
                    30%
                  </option>
                  <option
                    value={0.1}
                  >
                    10%
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    >
                      
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow3"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Overflow
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  className="euiSelect euiSelect--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onMouseUp={[Function]}
                  value="visible"
                >
                  <option
                    value="hidden"
                  >
                    Hidden
                  </option>
                  <option
                    value="visible"
                  >
                    Visible
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    >
                      
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiSpacer euiSpacer--m"
    />
    <h6
      className="euiTitle euiTitle--xxxsmall euiTitle--uppercase"
    >
      Border
    </h6>
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Thickness
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <input
                  className="euiFieldNumber euiFieldNumber--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="number"
                  value={1}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow3"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Style
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="euiPopover__anchor"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Radius
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <input
                  className="euiFieldNumber euiFieldNumber--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="number"
                  value={0}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow1"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
          style={
            Object {
              "fontSize": 0,
            }
          }
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Color
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiPopover euiPopover--anchorUpCenter"
              id="color-picker-popover"
            >
              <div
                className="euiPopover__anchor"
              >
                <button
                  aria-label="Border white"
                  className="euiLink euiLink--primary"
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 0,
                    }
                  }
                  type="button"
                >
                  <div
                    className="canvasColorDot"
                  >
                    <div
                      className="canvasColorDot__background canvasCheckered"
                    />
                    <div
                      className="canvasColorDot__foreground"
                      style={
                        Object {
                          "background": "#fff",
                        }
                      }
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/ContainerStyle/components appearance form 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
    justify-content="spaceBetween"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrow2"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Padding
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldNumber euiFieldNumber--compressed"
                id="generated-id"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="number"
                value={4}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrow3"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Opacity
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <select
                className="euiSelect euiSelect--compressed"
                id="generated-id"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onMouseUp={[Function]}
                value="1"
              >
                <option
                  value={1}
                >
                  100%
                </option>
                <option
                  value={0.9}
                >
                  90%
                </option>
                <option
                  value={0.7}
                >
                  70%
                </option>
                <option
                  value={0.5}
                >
                  50%
                </option>
                <option
                  value={0.3}
                >
                  30%
                </option>
                <option
                  value={0.1}
                >
                  10%
                </option>
              </select>
              <div
                className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  className="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    className="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrow3"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Overflow
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <select
                className="euiSelect euiSelect--compressed"
                id="generated-id"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onMouseUp={[Function]}
                value="visible"
              >
                <option
                  value="hidden"
                >
                  Hidden
                </option>
                <option
                  value="visible"
                >
                  Visible
                </option>
              </select>
              <div
                className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  className="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    className="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/ContainerStyle/components border form 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrow2"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Thickness
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldNumber euiFieldNumber--compressed"
                id="generated-id"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="number"
                value={1}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrow3"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Style
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrow2"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Radius
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldNumber euiFieldNumber--compressed"
                id="generated-id"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="number"
                value={1}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrow1"
    >
      <div
        className="euiFormRow euiFormRow--compressed"
        id="generated-id-row"
        style={
          Object {
            "fontSize": 0,
          }
        }
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Color
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiPopover--anchorUpCenter"
            id="color-picker-popover"
          >
            <div
              className="euiPopover__anchor"
            >
              <button
                aria-label="Border black"
                className="euiLink euiLink--primary"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "fontSize": 0,
                  }
                }
                type="button"
              >
                <div
                  className="canvasColorDot"
                >
                  <div
                    className="canvasColorDot__background canvasCheckered"
                  />
                  <div
                    className="canvasColorDot__foreground"
                    style={
                      Object {
                        "background": "#000",
                      }
                    }
                  />
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/ContainerStyle/components extended template 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div>
    <h6
      className="euiTitle euiTitle--xxxsmall euiTitle--uppercase"
    >
      Appearance
    </h6>
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
      justify-content="spaceBetween"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Padding
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <input
                  className="euiFieldNumber euiFieldNumber--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="number"
                  value={0}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow3"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Opacity
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  className="euiSelect euiSelect--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onMouseUp={[Function]}
                  value={1}
                >
                  <option
                    value={1}
                  >
                    100%
                  </option>
                  <option
                    value={0.9}
                  >
                    90%
                  </option>
                  <option
                    value={0.7}
                  >
                    70%
                  </option>
                  <option
                    value={0.5}
                  >
                    50%
                  </option>
                  <option
                    value={0.3}
                  >
                    30%
                  </option>
                  <option
                    value={0.1}
                  >
                    10%
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    >
                      
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow3"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Overflow
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  className="euiSelect euiSelect--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onMouseUp={[Function]}
                  value="visible"
                >
                  <option
                    value="hidden"
                  >
                    Hidden
                  </option>
                  <option
                    value="visible"
                  >
                    Visible
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    >
                      
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="euiSpacer euiSpacer--m"
    />
    <h6
      className="euiTitle euiTitle--xxxsmall euiTitle--uppercase"
    >
      Border
    </h6>
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiSpacer euiSpacer--xs"
    />
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Thickness
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <input
                  className="euiFieldNumber euiFieldNumber--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="number"
                  value={1}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow3"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Style
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="euiPopover__anchor"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Radius
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <input
                  className="euiFieldNumber euiFieldNumber--compressed"
                  id="generated-id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="number"
                  value={0}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrow1"
      >
        <div
          className="euiFormRow euiFormRow--compressed"
          id="generated-id-row"
          style={
            Object {
              "fontSize": 0,
            }
          }
        >
          <div
            className="euiFormRow__labelWrapper"
          >
            <label
              className="euiFormLabel euiFormRow__label"
              htmlFor="generated-id"
              id="generated-id-label"
            >
              Color
            </label>
          </div>
          <div
            className="euiFormRow__fieldWrapper"
          >
            <div
              className="euiPopover euiPopover--anchorUpCenter"
              id="color-picker-popover"
            >
              <div
                className="euiPopover__anchor"
              >
                <button
                  aria-label="Border white"
                  className="euiLink euiLink--primary"
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "fontSize": 0,
                    }
                  }
                  type="button"
                >
                  <div
                    className="canvasColorDot"
                  >
                    <div
                      className="canvasColorDot__background canvasCheckered"
                    />
                    <div
                      className="canvasColorDot__foreground"
                      style={
                        Object {
                          "background": "#fff",
                        }
                      }
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
